[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
migration = { path = "../migration" }
entity = { path = "../entity" }
anyhow = "1"
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
axum = { version = "0.7", features = ["multipart"]}
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0", features = ["limit", "trace"] }
http-body-util = "0.1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
byte-unit = "5"
snowflake-rs = "0.1"
lazy_static = "1.4"
validator = {version = "0.16", features = ["derive"]}
hex="0.4"
md5 = "0.7"
rayon = "1"
once_cell = "1"