[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
sea-orm = {version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
config = "0.13"
log = "0.4"
log4rs = { version = "1", features = ["pattern_encoder"]}
chrono = "0"
serde = { version = "1.0.195", features = ["derive"] }
